// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CardFooterInstanceActionButtons renders per snapshot with test-kebabmenuarialabel aria label passed as prop: action button menu props 1`] = `undefined`;

exports[`CardFooterInstanceActionButtons renders per snapshot with test-kebabmenuarialabel aria label passed as prop: component snapshot 1`] = `
<DocumentFragment>
  <div>
    <div
      class="ms-TooltipHost root-109"
      role="none"
    >
      <div
        hidden=""
        id="tooltip1"
        style="position: absolute; width: 1px; height: 1px; margin: -1px; padding: 0px; border: 0px; overflow: hidden; white-space: nowrap;"
      >
        More actions
      </div>
    </div>
    <h3>
      2222
    </h3>
    <mock-toast
      deps="[object Object]"
      timeoutlength="6000"
    />
  </div>
</DocumentFragment>
`;

exports[`CardFooterInstanceActionButtons renders per snapshot with undefined aria label passed as prop: action button menu props 1`] = `undefined`;

exports[`CardFooterInstanceActionButtons renders per snapshot with undefined aria label passed as prop: component snapshot 1`] = `
<DocumentFragment>
  <div>
    <div
      class="ms-TooltipHost root-109"
      role="none"
    >
      <div
        hidden=""
        id="tooltip2"
        style="position: absolute; width: 1px; height: 1px; margin: -1px; padding: 0px; border: 0px; overflow: hidden; white-space: nowrap;"
      >
        More actions
      </div>
    </div>
    <h3>
      2222
    </h3>
    <mock-toast
      deps="[object Object]"
      timeoutlength="6000"
    />
  </div>
</DocumentFragment>
`;

exports[`CardFooterInstanceActionButtons renders without copyFailureDetails supported: component snapshot 1`] = `
<DocumentFragment>
  <div>
    <span>
      <mock-button
        appearance="transparent"
        classname="item1"
        size="medium"
      >
        item 1
      </mock-button>
      <h3>
        333
      </h3>
    </span>
    <span>
      <mock-button
        appearance="transparent"
        classname="item2"
        size="medium"
      >
        item 2
      </mock-button>
      <h3>
        333
      </h3>
    </span>
  </div>
</DocumentFragment>
`;

exports[`CardFooterInstanceActionButtons with isCardFooterCollapsed=false renders per snapshot: component snapshot 1`] = `
<DocumentFragment>
  <div>
    <span>
      <mock-button
        appearance="transparent"
        classname="item1"
        size="medium"
      >
        item 1
      </mock-button>
      <h3>
        333
      </h3>
    </span>
    <span>
      <mock-button
        appearance="transparent"
        classname="item2"
        size="medium"
      >
        item 2
      </mock-button>
      <h3>
        333
      </h3>
    </span>
    <mock-toast
      deps="[object Object]"
      timeoutlength="6000"
    />
  </div>
</DocumentFragment>
`;

exports[`CardFooterInstanceActionButtons with isCardFooterCollapsed=true renders per snapshot: action button menu props 1`] = `undefined`;

exports[`CardFooterInstanceActionButtons with isCardFooterCollapsed=true renders per snapshot: component snapshot 1`] = `
<DocumentFragment>
  <div>
    <div
      class="ms-TooltipHost root-109"
      role="none"
    >
      <div
        hidden=""
        id="tooltip0"
        style="position: absolute; width: 1px; height: 1px; margin: -1px; padding: 0px; border: 0px; overflow: hidden; white-space: nowrap;"
      >
        More actions
      </div>
    </div>
    <h3>
      2222
    </h3>
    <mock-toast
      deps="[object Object]"
      timeoutlength="6000"
    />
  </div>
</DocumentFragment>
`;
